Fix issue for overflowing content when name was too long. Add validator for NTEE code

--- a/client/components/OrganizationList.scss
+++ b/client/components/OrganizationList.scss
@@ -56,6 +56,12 @@
 }
 .card-container-company{
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+}
+.company-container{
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
